--- a/Web/Frontend/Html/index.html
+++ b/Web/Frontend/Html/index.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
     <title>Minecraft Server Monitoring</title>
 </head>
 <body>
     <header>
-        <h1>Minecraft Server Monitoring</h1>
+        <h1 class="is-marginless">Mineserver</h1>
     </header>
     <main>
-        <section>
-            <h2>Server Status</h2>
-            <!-- Content will go here -->
-        </section>
-    </main>
+        <button class="button is-success" onclick="startServer()" id="serverButton">Start Server</button>
+        <p id="serverStatus" class="has-text-danger">Server is OFF</p>            </main>
     <footer>
-        <p>&copy; 2024 Minecraft Server Monitoring</p>
+        <p>&copy; 2025 Mineserver</p>
     </footer>
+    <script src="../Js/script.js"></script>
 </body>
 </html>
