--- a/Web/Frontend/Html/presentation.html
+++ b/Web/Frontend/Html/presentation.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MineServer - Présentation</title>
-    <!-- Styles communs -->
+    <title>MineServer</title>
     <link rel="stylesheet" href="../Css/common/base.css">
     <link rel="stylesheet" href="../Css/common/components.css">
-    <!-- Styles spécifiques -->
     <link rel="stylesheet" href="../Css/pages/presentation.css">
-    <!-- Icônes -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -29,7 +26,6 @@
         </div>
         <ul class="menu-items">
             <li><a href="/"><i class="fas fa-home"></i> Accueil</a></li>
-            <!-- <li><a href="presentation.html" class="active"><i class="fas fa-info-circle"></i> À propos</a></li> -->
             <li><a href="/monitoring"><i class="fas fa-tachometer-alt"></i>MineServer</a></li>
             <li><a href="#features"><i class="fas fa-list-check"></i> Fonctionnalités</a></li>
             <li><a href="#technology"><i class="fas fa-code"></i> Technologies</a></li>
@@ -147,7 +143,6 @@
                             <div class="tech-item"><i class="fab fa-node-js"></i> Node.js</div>
                             <div class="tech-item"><i class="fas fa-server"></i> Express</div>
                             <div class="tech-item"><i class="fas fa-plug"></i> Socket.IO</div>
-                            <div class="tech-item"><i class="fas fa-database"></i> FS API</div>
                         </div>
                     </div>
                     
@@ -157,7 +152,6 @@
                             <div class="tech-item"><i class="fab fa-linux"></i> Bash</div>
                             <div class="tech-item"><i class="fas fa-cogs"></i> Shell</div>
                             <div class="tech-item"><i class="fas fa-shield-alt"></i> Firewall</div>
-                            <div class="tech-item"><i class="fas fa-lock"></i> SSL/TLS</div>
                         </div>
                     </div>
                 </div>
@@ -199,10 +193,8 @@
     </main>
 
     <footer class="site-footer">
-        <p>&copy; 2023 MineServer - Fait avec <i class="fas fa-heart"></i> par l'équipe YNOV</p>
+        <p>&copy; 2025 MineServer - Fait avec <i class="fas fa-heart"></i> par l'équipe YNOV</p>
     </footer>
-
-    <!-- Scripts -->
     <script src="../Js/common/theme.js"></script>
     <script src="../Js/common/navigation.js"></script>
 </body>
